# eBay-iPhone-Price-Prediction

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
artifacts/: metadata.json  shipping_pipeline.joblib
artifacts/serving/: serving.json  shipping.onnx
data/processed/: listings.csv
data/raw/: ebay_iphone11_2026-07-06.csv
deploy/aws/: apprunner.sh  push-ecr.sh
deploy/go/: Dockerfile  go.mod  main.go
deploy/k8s/: deployment.yaml  hpa.yaml  service.yaml
reports/: model_comparison.csv  model_comparison.md
src/ebay_price/: __init__.py  api.py  clean.py  config.py  export.py  models.py  sampling.py  scrape.py  train.py
src/ebay_price.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_clean.py  test_export.py  test_sampling.py  test_train.py
