[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-price"
version = "1.0.0"
description = "Used iPhone (8 -> 17) sold-price & shipping prediction from eBay.ca listings"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kharanshu Naghera" }]
requires-python = ">=3.11"
dependencies = [
    # serving-time deps — must be able to unpickle any model-zoo winner
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.3",
    "catboost>=1.2.5",
    "joblib>=1.4",
    "pydantic>=2.7",
]

[project.optional-dependencies]
scrape = ["curl_cffi>=0.10", "beautifulsoup4>=4.12", "lxml>=5.2"]
train = [
    "imbalanced-learn>=0.12",
    "matplotlib>=3.8",
    "tabulate>=0.9",
    # torch is GPU-build specific; install separately, e.g.:
    #   pip install torch --index-url https://download.pytorch.org/whl/cu121
]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5"]
# ONNX export for the Go serving path (deploy/go)
export = ["skl2onnx>=1.17", "onnxmltools>=1.12", "onnxruntime>=1.18"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
